cpu-mem-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podtest-res
  namespace: devops
spec:
  containers:
  - name: con1
    image: tomcat:latest
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: 64Mi
        cpu:  80m
      limits:
        memory: 128Mi
        cpu: 150m
  - name: con2
    image: nginx:latest
    ports:
    - containerPort: 80
