deployment-node-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: my-dep
spec:
   replicas: 3
   selector:
      matchLabels:
         app: myapp
   template:
      metadata:
         labels:
            app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
        nodeSelector:
            color: red
#        nodeName: aks-agentpool-19426731-vmss000008
