multi-con.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: wordpress
spec:
  containers:
  - name: con1
    image: wordpress:latest
    ports:
    - containerPort: 80
  - name: con2
    image: mysql:5.7
    ports:
    - containerPort: 3306
