pvc-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mydep-vol
spec:
   replicas: 1
   selector:
      matchLabels:
         app: myapp
   template:
      metadata:
         labels:
            app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /app
        volumes:
        - name: myvol
          persistentVolumeClaim:
             claimName: mypvc
