deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: my-dep
spec:
   replicas: 3
   selector:
      matchLabels:
         app: myapp
   template:
      metadata:
         labels:
            app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80

---
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
