hostpath-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: my-dep-hpath
spec:
   replicas: 3
   selector:
      matchLabels:
         app: myapp
   template:
      metadata:
         labels:
            app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /data
        - name: con2
          image: tomcat:latest
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: myvol
            mountPath: /opt/mydata
        volumes:
        - name: myvol
          hostPath:
            path: /hpath

          

---
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
