pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: mypod
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mypod-svc
spec:
#  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
