ingress-not-working.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: my-dep
spec:
   replicas: 3
   selector:
      matchLabels:
         app: myapp
   template:
      metadata:
         labels:
            app: myapp
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80

---
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydep-ing
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing

spec:
#  ingressClassName: nginx
  rules:
#  - host: "openshiftoc.tk"
  - http:
      paths:
      - pathType: Prefix
        path: "/myapp"
        backend:
          service:
            name: mydep-svc
            port:
              number: 80
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: hello-world-ingress-static
#spec:
#  ingressClassName: nginx
#  rules:
#  - http:
#      paths:
#      - path: /myapp
#        pathType: Prefix
#        backend:
#          service:
#            name: mydep-svc
#            port: 
#              number: 80
