ingress-on-prem.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "abc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: mydep-svc
            port:
              number: 80
