ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
     app: nginxapp
  template:
      metadata:
       labels:
         app: nginxapp
      spec:
        containers:
        - name: nginx-con
          image: nginx:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: magical-app
spec:
        #  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginxapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ing-app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - host: aneesh.com
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: magical-app
            port:
              number: 80
